--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@types/node": "^14.14.14",
     "@types/socket.io-client": "^1.4.34",
+    "del": "^6.0.0",
     "simple-sandbox": "^0.3.20",
     "socket.io-client": "^3.0.4",
     "typescript": "^4.1.3"
