--- a/package.json
+++ b/package.json
@@ -24,20 +24,22 @@
   },
   "homepage": "https://github.com/OpenSUST/sustoj-worker#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "eslint": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1"
+    "eslint-plugin-promise": "^5.1.0"
+  },
+  "optionalDependencies": {
+    "simple-sandbox": "^0.3.21"
   },
   "dependencies": {
-    "@types/node": "^14.14.14",
-    "@types/socket.io-client": "^1.4.34",
+    "@types/node": "^14.14.41",
+    "@types/socket.io-client": "^1.4.36",
     "del": "^6.0.0",
-    "simple-sandbox": "^0.3.20",
-    "socket.io-client": "^3.0.4",
-    "typescript": "^4.1.3"
+    "socket.io-client": "^4.0.1",
+    "typescript": "^4.2.4"
   }
 }
