--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "simple-sandbox": "^0.3.21"
   },
   "dependencies": {
+    "@types/lzma-native": "^4.0.0",
     "@types/node": "^14.14.41",
     "@types/socket.io-client": "^1.4.36",
     "del": "^6.0.0",
+    "lzma-native": "^7.0.1",
     "socket.io-client": "^4.0.1",
     "typescript": "^4.2.4"
   }
